2003-11-13  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex: doc fixes.

	* configure.ac, NEWS: autoconf 2.59.

2003-11-13  Akim Demaille  <akim@epita.fr>

	* configure.ac: Use AC_CHECK_DECLS, not txi_CHECK_DECLS.
	Also use # instead of dnl for comments.
	* acinclude.m4: Remove.

2003-11-14  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_noindent): output continued paragraphs with
	docbook and xml only when @noindent command is used.
	(cm_noindent_cmd): new function.  Patch from Arnold Robbins
	<arnold@skeeve.com>, 13 Nov 2003 15:43:02 +0200.

2003-11-11  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_i, cm_b, cm_r): do not use lineannotation if we
	are printing indices.

	* makeinfo/insertion.c (cm_insert_copying): removed unnecessary xml
	fix.

	* makeinfo/texinfo.dtd: added OElig and oelig entities.

2003-11-11  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_sp): disabled parameter expansion.

2003-11-10  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c:
	* makeinfo/insertion.c (cm_html): do not process @xml blocks.
	(cm_xml): new function to process @xml.

	* makeinfo/xml.c (xml_start_para, xml_end_para): skip para handling in
	footnote.
	(xml_insert_footnote): keep state in xml_in_footnote variable.

	* makeinfo/texinfo.dtd: updated settitle definition.

2003-11-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Output Formats): rewrite to fix underfull
	boxes.

2003-11-10  Alper Ersoy  <dirt@gtk.org>

	* doc/texinfo.tex (\commondummies): added registeredsymbol.

2003-11-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (main): fixed a segfault with --html
	--no-header.

2003-11-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/html.c (html_output_head): output node name in title first.

2003-11-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/xml.c:
	* makeinfo/xml.h: new Docbook elements for quotation: tip, note,
	important, warning, caution.

	* makeinfo/xml.c: better font tags for Docbook.